[gd_scene load_steps=5 format=3 uid="uid://cl6cn4d61p0hb"]

[ext_resource type="Script" path="res://enemy0.gd" id="1_t7iuf"]
[ext_resource type="PackedScene" uid="uid://doo7pq26uiny0" path="res://assets/entities/enemy.tscn" id="2_47wrk"]
[ext_resource type="PackedScene" uid="uid://nr0hs8sfdwlj" path="res://assets/map/wall.tscn" id="2_f3hcd"]
[ext_resource type="PackedScene" uid="uid://b5rm52irse7gj" path="res://assets/map/pedestal.tscn" id="3_b5c0v"]

[node name="enemy0" type="Node2D"]
script = ExtResource("1_t7iuf")
enemy_scene = ExtResource("2_47wrk")
pedestal_scene = ExtResource("3_b5c0v")

[node name="wall" parent="." instance=ExtResource("2_f3hcd")]

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(32, 0)

[node name="Marker2D2" type="Marker2D" parent="."]
position = Vector2(32, 32)

[node name="Marker2D3" type="Marker2D" parent="."]
position = Vector2(0, 32)

[node name="Marker2D4" type="Marker2D" parent="."]
position = Vector2(-32, 32)

[node name="Marker2D5" type="Marker2D" parent="."]
position = Vector2(-32, 0)

[node name="Marker2D6" type="Marker2D" parent="."]
position = Vector2(-32, -32)

[node name="Marker2D7" type="Marker2D" parent="."]
position = Vector2(0, -32)

[node name="Marker2D8" type="Marker2D" parent="."]
position = Vector2(32, -32)
